refactor: simplified